# churn_model_study

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  skills-lock.json
.dvc/: config
.github/workflows/: ci.yml
notebooks/: 01_hypothesis_screening.ipynb  02_deep_learning_benchmark.ipynb
src/churn_model/: __init__.py  api.py  config.py  data.py  experiment.py  inference.py  predict.py  schemas.py  serve.py  train.py  training.py
tests/: conftest.py  test_api.py  test_data.py  test_inference.py  test_training.py
