[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-model"
version = "0.1.0"
description = "Projeto inicial de churn com notebook unico para avaliacao de hipoteses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.0",
    "fastapi>=0.115.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.1",
    "mlflow>=2.17.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "pytest>=8.4.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.32.0",
    "xgboost>=2.1.4",
]

[project.scripts]
churn-train = "churn_model.train:main"
churn-experiment = "churn_model.experiment:main"
churn-predict = "churn_model.predict:main"
churn-serve = "churn_model.serve:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
